objects/nitro__Nitro_EA_Reference_Field__c.object
<CustomObject>
    <fields>
        <fullName>nitro__Nitro_EverydayActivity__c</fullName>
        <label>Nitro EverydayActivity</label>
        <referenceTo>nitro__Nitro_EverydayActivity__c</referenceTo>
        <relationshipLabel>Nitro EA Reference Fields</relationshipLabel>
        <relationshipName>Nitro_EA_Reference_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nitro__fieldName__c</fullName>
        <label>field name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__objectName__c</fullName>
        <label>object name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Nitro EA Reference Fields</label>
    <listViews>
        <fullName>nitro__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nitro EA Reference Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nitro EA Reference Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>